# flake-edit

./: .deny.toml  .envrc  .gitignore  .justfile  .rustfmt-toolchain.toml  .rustfmt.toml  .tarpaulin.toml  .treefmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs  comment_test.rs  deny.toml  flake.nix  rust-toolchain.toml  tasks.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: actionlint.yml  ci.yml  editorconfig.yml  update-flake-lock.yml  update-rust-toolchain.yml
assets/completions/: completions.fish  test.sh
assets/tape/: add_follow_input.tape  add_input.tape  add_input_inferred.tape  change_input.tape  flake.nix  follow_input.tape  follow_input_auto.tape  list_inputs.tape  list_inputs_json.tape  pin_input.tape  record.sh  remove_input.tape  toggle_add.tape  toggle_flip.tape  toggle_remove.tape  unpin_input.tape  update_input.tape
assets/tape/toggle_flip/: flake.nix
benches/: benches.rs  divan.rs
doc/: CONTRIBUTING.md  RELEASE.md
docs/: CONTRIBUTING.md
docs/man/: flake-edit.md
lib/: nix-uri
lib/flake-lock/: Cargo.toml
lib/nix-uri/: Cargo.toml
lib/nix-uri/src/: lib.rs
nix/: apps.nix  checks.nix  default.nix  devshells.nix  env.nix  fe.nix  flake-edit.nix  forgejo-test.nix  formatter.nix  meta.nix  packages.nix
nix/checks/: default.nix  inputs.nix
nix/checks/forge/: default.nix  pyproject.toml
nix/checks/forge/forge/: __init__.py  _logging.py  api.py  cli.py  client.py  runner.py  schemas.py
src/: api.rs  app.rs  cache.rs  change.rs  channel.rs  cli.rs  completions.rs  config.rs  diff.rs  edit.rs  error.rs  follows.rs  forge.rs  git.rs  input.rs  lib.rs  lock.rs  log.rs  main.rs  semver.rs  state.rs  tui.rs  update.rs  uri.rs  validate.rs  walk.rs
src/app/: commands.rs  editor.rs  error.rs  follow.rs  handler.rs  state.rs
src/assets/: config.toml
src/follows/: graph.rs  path.rs
src/forge/: api.rs  archive.rs  cache.rs  channel.rs  update.rs  version.rs
src/snapshots/: flake_add__tests__parse_multiple_follows.snap  flake_add__tests__parse_multiple_inputs.snap  flake_add__tests__parse_simple_input_two_urls.snap  flake_add__tests__parse_simple_input_url.snap  flake_add__tests__parse_single_follows.snap
src/tui/: app.rs  backend.rs  completions.rs  components.rs  helpers.rs  run.rs  style.rs  view.rs  workflow.rs
src/validate/: error.rs  follows.rs  syntax.rs
src/walk/: context.rs  error.rs  inputs.rs  node.rs  outputs.rs  toggle.rs
tests/: api.rs  cli.rs  common.rs  edit.rs  follow_idempotence.rs  graph_helpers.rs  toggle_idempotence.rs  tui.rs  update.rs  walker.rs
tests/common/: mod.rs
tests/fixtures/: all_blanks.flake.nix  centerpiece-lock-outdated.flake.nix  centerpiece.flake.nix  comments_before_brace.flake.nix  completely_flat_toplevel.flake.nix  completely_flat_toplevel_alt.flake.nix  completely_flat_toplevel_not_a_flake.flake.nix  completely_flat_toplevel_not_a_flake_nested.flake.nix  deep_follows_2.config.toml  deeply_nested_inputs.flake.nix  depth_upstream_partial.config.toml  depth_upstream_partial.flake.nix  depth_upstream_redundant.flake.nix  depth_upstream_redundant_declared.flake.nix  depth_upstream_redundant_depth3.config.toml  depth_upstream_redundant_depth3.flake.nix  depth_upstream_redundant_partial.flake.nix  dot_ancestor_cycle.flake.nix  empty_inputs.flake.nix  existing_follows_flat.flake.nix  existing_follows_flat_retarget.flake.nix  existing_follows_mixed.flake.nix  existing_follows_nested.flake.nix  existing_follows_nested_retarget.flake.nix  first_nested_node.flake.nix  flat_nested_flat.flake.nix  flat_toplevel_comments.flake.nix  flat_toplevel_existing_follows.flake.nix  flat_toplevel_no_follows.flake.nix  follow_dotted_input_promotion.flake.nix  follow_no_inputs.flake.nix  follow_respects_ancestor.flake.nix  follow_respects_nulled.flake.nix  follow_slash_syntax.flake.nix  follows_cycle.flake.nix  follows_empty_target.flake.nix  follows_only_nested.flake.nix  follows_only_toplevel.flake.nix  hyperconfig.flake.nix  ignore_treefmt.config.toml  (+74 more)
tests/snapshots/: cli__add@all_blanks_vmsh.snap  cli__add@comments_before_brace_vmsh.snap  cli__add@completely_flat_toplevel_alt_vmsh.snap  cli__add@completely_flat_toplevel_vmsh.snap  cli__add@deeply_nested_inputs_vmsh.snap  cli__add@first_nested_node_vmsh.snap  cli__add@flat_nested_flat_vmsh.snap  cli__add@let_wrapped_vmsh.snap  cli__add@one_level_nesting_flat_vmsh.snap  cli__add@root_alt_vmsh.snap  cli__add@root_vmsh.snap  cli__add@toplevel_nesting_vmsh.snap  cli__add_follow@centerpiece_home-manager_nixpkgs.snap  cli__add_follow@centerpiece_treefmt-nix_nixpkgs.snap  cli__add_follow@first_nested_node_naersk_flake-utils.snap  cli__add_follow@mixed_style_blueprint_nixpkgs.snap  cli__add_follow@mixed_style_blueprint_systems.snap  cli__add_follow@mixed_style_mprisd_flake-parts.snap  cli__add_follow@mixed_style_mprisd_nixpkgs.snap  cli__add_follow@quoted_dotted_nested_"lib-v1_5"_nixpkgs.snap  cli__add_follow@root_crane_flake-compat.snap  cli__add_follow_accepts_two_segment_dot_path_unchanged.snap  cli__add_follow_existing_different_input@existing_follows_mixed_devenv_flake-utils.snap  cli__add_follow_existing_same@completely_flat_toplevel_crane_nixpkgs.snap  cli__add_follow_existing_same@completely_flat_toplevel_rust-overlay_nixpkgs.snap  cli__add_follow_existing_same@existing_follows_flat_naersk_nixpkgs.snap  cli__add_follow_existing_same@existing_follows_flat_rust-overlay_nixpkgs.snap  cli__add_follow_existing_same@existing_follows_nested_devenv_nixpkgs.snap  cli__add_follow_existing_same@existing_follows_nested_rust-overlay_nixpkgs.snap  cli__add_follow_flat@flat_toplevel_comments_crane_nixpkgs.snap  cli__add_follow_flat@flat_toplevel_comments_fenix_nixpkgs.snap  cli__add_follow_flat@flat_toplevel_no_follows_crane_nixpkgs.snap  cli__add_follow_flat@flat_toplevel_no_follows_fenix_nixpkgs.snap  cli__add_follow_flat@mixed_style_harmonia_nixpkgs.snap  cli__add_follow_flat@one_level_nesting_flat_rust-overlay_flake-compat.snap  cli__add_follow_flat@toplevel_block_nested_follows_blocky_flake-parts.snap  cli__add_follow_nonexistent@root_nonexistent_nixpkgs.snap  (+428 more)
(+36 files in other folders)
