[package]
name = "flake-edit"
description = "Edit your flake inputs with ease."
version = "0.0.2"
edition = "2021"
keywords = ["nix", "flake", "terminal", "cli"]
categories = ["command-line-utilities"]

authors = ["Alexander Kenji Berthold"]

readme = "README.md"
license = "MIT"
repository = "https://github.com/a-kenji/flake-edit"
documentation = "https://github.com/a-kenji/flake-edit"
homepage = "https://github.com/a-kenji/flake-edit"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

[[bin]]
name = "flake-edit"

[workspace]
resolver = "2"
members = ["."]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["application"]
application = [
  "clap",
  "write",
  "assets",
  "anyhow",
  "diff",
  "tracing-subscriber",
]
write = []
diff = ["diffy"]
assets = ["clap_complete", "clap_complete_nushell", "roff", "clap_mangen"]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
clap = { version = "4.5.53", optional = true, features = ["derive"] }
color-eyre = "0.6.5"
diffy = { version = "0.4.2", optional = true }
directories = "6.0.0"
nix-uri = "0.1.8"
reqwest = { version = "0.13.1", features = ["blocking"] }
rnix = "0.12.0"
ropey = { version = "1.6.1" }
semver = "1.0.27"
serde = "1.0.228"
serde_json = { version = "1.0.148" }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = [
  "time",
  "std",
  "fmt",
  "env-filter",
], optional = true }


[build-dependencies]
clap = { version = "4.5.53", features = ["derive"], optional = true }
clap_complete = { version = "4.5.64", features = [], optional = true }
clap_complete_nushell = { version = "4.5.10", optional = true }
clap_mangen = { version = "0.2.31", features = [], optional = true }
roff = { version = "0.2.2", optional = true }

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[[bench]]
name = "divan"
path = "benches/divan.rs"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true

[profile.dev]
incremental = true
lto = "thin"
# Set this to 1 or 2 to get more useful backtraces in debugger.
debug = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.dev.package.backtrace]
opt-level = 3

[dev-dependencies]
criterion = "0.8.1"
divan = "0.1.21"
insta = { version = "1.45.1", features = ["yaml"] }
