[package]
name = "flake-lock"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_json = "1.0.105"
thiserror = "1.0.48"
tracing = "0.1.40"
