[package]
name = "nix-uri"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.183" }
