[package]
name = "nix-uri"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
rnix = "0.11.0"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.48"
tracing = "0.1.37"
url = "2.4.1"
