[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0"
requires-python = ">=3.13"

[project.scripts]
forge-cli = "forge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge*"]

[tool.setuptools.package-data]
forge = ["py.typed"]
